select stays open until apply

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -1106,3 +1106,15 @@ code {
 
 }
 
+.multiselect__content-wrapper {
+  position: absolute !important
+}
+
+.selecting {
+  display: block !important
+
+}
+
+.multiselect__tags {
+  height: 40px !important
+}
