base example for percentage git data metric viz

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -263,6 +263,11 @@ cite.metric a
   // position: relative
   margin-bottom: 30px
 
+.normalbar *
+  overflow: visible !important;
+  width: 100%;
+  // position: relative
+
 .bubblechart svg
   width: 100%;
 
@@ -1085,7 +1090,7 @@ code {
 .tickradios {
   text-align: center
   height: 60px
-
+  margin-bottom: 0
 }
 
 .multiselect__content-wrapper {
