changed hover colors for repo compare select, reset button collapses as well as apply, change apply to reset, default project if only one downloaded

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -525,9 +525,11 @@ div.checkbox_select .select_input
 
 .multiselect__content-wrapper ul { list-style: none; }
 .multiselect__content-wrapper ul li { }
+
 .multiselect__content-wrapper ul li .multiselect__option { display:block; text-decoration:none; color:#000000; background-color:#FFFFFF; line-height:30px;
   border-bottom-style:solid; border-bottom-width:1px; border-bottom-color:#CCCCCC; padding-left:10px; cursor:pointer; }
-.multiselect__content-wrapper ul li .multiselect__option:hover { background-color:#00FF00; background-image:url(../images/hover.png); background-repeat:repeat-x; }
+
+.multiselect__content-wrapper ul li .multiselect__option:hover { background-color:#EEEEEE; background-image:url(../images/hover.png); background-repeat:repeat-x; }
 .multiselect__content-wrapper ul li .multiselect__option strong { margin-right:10px; }
 
 .multiselect__content-wrapper {
@@ -541,11 +543,11 @@ div.checkbox_select .select_input
 }
 
 .multiselect__option--selected {
-  background-color:#00FF00 !important;
+
 }
 
 .multiselect__option--selected:hover {
-  background-color:#FF0000 !important
+  background-color:#00FF00 !important
 }
 
 .multiselect__content-wrapper ul li span {
