got rid of drop down dl repos

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -289,7 +289,7 @@ cite.metric a
   opacity: 0.5
 
 #collapse {
-  padding: 10px 0px 0px 0px
+  padding: 10px 0px 15px 0px
 }
 
 .linechart
@@ -1105,4 +1105,8 @@ code {
 
 .multiselect__tags {
   height: 40px !important
+}
+
+.relative {
+  position: relative !important
 }
