--- a/frontend/public/app.css
+++ b/frontend/public/app.css
@@ -2822,7 +2822,7 @@ cite.metric a {
   opacity: 0.5;
 }
 #collapse {
-  padding: 10px 0px 0px 0px;
+  padding: 10px 0px 15px 0px;
 }
 .linechart {
   padding: 0px 0px 0px 18px;
@@ -3483,6 +3483,9 @@ input:focus {
 }
 .multiselect__tags {
   height: 40px !important;
+}
+.relative {
+  position: relative !important;
 }
 @-moz-keyframes spin {
   0% {
