updates to git vizs

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -261,7 +261,7 @@ cite.metric a
   overflow: visible !important;
   width: 100%;
   // position: relative
-  margin-bottom: 30px
+
 
 .normalbar *
   overflow: visible !important;
@@ -1109,4 +1109,11 @@ code {
 
 .relative {
   position: relative !important
+}
+
+.note {
+  font-size: 10px
+  opacity: .8
+  margin: 0
+  text-align: center
 }
