--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -543,7 +543,7 @@ div.checkbox_select .select_input
 }
 
 .multiselect__option--selected {
-
+  background-color:#00FF00 !important
 }
 
 .multiselect__option--selected:hover {
