compared repo selection dropdown opaque

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -524,7 +524,7 @@ div.checkbox_select .select_input
 }
 
 .multiselect__content-wrapper ul { list-style: none; }
-.multiselect__content-wrapper ul li { }
+.multiselect__content-wrapper { z-index: 1000000 !important }
 
 .multiselect__content-wrapper ul li .multiselect__option { display:block; text-decoration:none; color:#000000; background-color:#FFFFFF; line-height:30px;
   border-bottom-style:solid; border-bottom-width:1px; border-bottom-color:#CCCCCC; padding-left:10px; cursor:pointer; }
