--- a/frontend/public/app.css
+++ b/frontend/public/app.css
@@ -2999,6 +2999,9 @@ div.checkbox_select .select_input {
 .multiselect__content-wrapper ul {
   list-style: none;
 }
+.multiselect__content-wrapper {
+  z-index: 1000000 !important;
+}
 .multiselect__content-wrapper ul li .multiselect__option {
   display: block;
   text-decoration: none;
