display 'repo not found' when searching for invalid repos, and fixes the dropdown

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -1117,3 +1117,14 @@ code {
   margin: 0
   text-align: center
 }
+
+.invisible {
+  visibility: hidden
+}
+
+.invalid-search {
+  color: red
+  font-size: 16px
+  text-align: center
+  vertical-align: bottom
+}
