fixes two issues in issue gitHub issue 21p0

--- a/frontend/public/app.css
+++ b/frontend/public/app.css
@@ -3503,9 +3503,14 @@ input:focus {
 }
 .invalid-search {
   color: #f00;
-  font-size: 16px;
-  text-align: center;
-  vertical-align: bottom;
+  font-size: 14px;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  padding-bottom: 14px;
 }
 @-moz-keyframes spin {
   0% {
