--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -1124,7 +1124,13 @@ code {
 
 .invalid-search {
   color: red
-  font-size: 16px
-  text-align: center
-  vertical-align: bottom
+  font-size: 14px
+  
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  padding-bottom: 14px
 }
