change to margin in ghstyle and added fix in dynamic line chart

--- a/frontend/public/app.css
+++ b/frontend/public/app.css
@@ -2686,7 +2686,7 @@ section.status {
   position: relative;
   z-index: 2;
   width: 100%;
-  margin: -10px 0px 30px 0px;
+  margin: 10px auto;
   padding: 0px 30px 0px 25px;
 }
 .section {
