--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -131,7 +131,7 @@ section.status
   position: relative
   z-index: 2
   width: 100%;
-  margin: -10px 0px 30px 0px;
+  margin: 10px auto;
   padding: 0px 30px 0px 25px
 
 .section {
@@ -1125,7 +1125,6 @@ code {
 .invalid-search {
   color: red
   font-size: 14px
-  
   display: -webkit-flex;
   display: flex;
   -webkit-align-items: center;
