Reduce whitespace on Git tab

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -1308,3 +1308,9 @@ code {
   margin-left: -50vw;
   margin-right: -50vw;
 }
+
+.parent{
+  position: absolute
+  z-index: 1 !important
+  align-content: center
+}
