--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -263,7 +263,6 @@ cite.metric a
   margin: auto
 
 .error:before
-  content: "\26A0"
   font-size: 3em;
   justify-content: center
   padding: 50px 50px 50px 50px
@@ -331,8 +330,7 @@ cite.metric a
 }
 
 .linechart
-  padding: 0px 0px 0px 18px
-
+  text-align: center
 
 .loader {
   width: 100%
