made all base components work with augur dashboard, filled them with dummy data

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -31,7 +31,8 @@ header .search
 #logo
   display: inline-block
   margin-top: 0px
-  max-width: 250px
+  max-width: 200px
+  transform: translateY(-12px)
 
 .content
 
@@ -271,9 +272,6 @@ cite.metric a
 #optionheader
   font-size: 1.1em;
   font-weigth: 600
-
-.marks
-  padding: 10px 0px 0px 24px !important
 
 .role-title > text
   font-size: 20px !important
@@ -1311,4 +1309,8 @@ code {
   position: absolute
   z-index: 1 !important
   align-content: center
+}
+
+.list-group-small .list-group-item {
+  font-size: 1.3rem !important
 }
