--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -1312,3 +1312,17 @@ code {
   z-index: 1 !important
   align-content: center
 }
+
+details summary
+  text-align: center !important;
+  max-width: 113px
+  float: left
+
+details summary::after {
+  display: inline-block;
+    position: relative;
+  content: " Download Links "
+}
+
+details summary svg
+  display: none
