--- a/frontend/public/app.css
+++ b/frontend/public/app.css
@@ -6060,6 +6060,19 @@ input:focus {
   z-index: 1 !important;
   align-content: center;
 }
+details summary {
+  text-align: center !important;
+  max-width: 113px;
+  float: left;
+}
+details summary::after {
+  display: inline-block;
+  position: relative;
+  content: " Download Links ";
+}
+details summary svg {
+  display: none;
+}
 @-moz-keyframes spin {
   0% {
     transform: rotate(0deg);
