add more space b/w head and body of table

--- a/frontend/app/styles/augur.styl
+++ b/frontend/app/styles/augur.styl
@@ -184,6 +184,10 @@ section.status
 .repo-link-table-body
   background: rgb(234, 234, 234)
 
+thead tr {
+  border-bottom: 10px solid rgb(234, 234, 234);
+}
+
 th,td
   padding: 0
 
