--- a/frontend/public/app.css
+++ b/frontend/public/app.css
@@ -2725,6 +2725,9 @@ section.status {
 .repo-link-table-body {
   background: #eaeaea;
 }
+thead tr {
+  border-bottom: 10px solid #eaeaea;
+}
 th,
 td {
   padding: 0;
