dashboard new endpoints progress

--- a/frontend/app/styles/augur.styl
+++ b/frontend/app/styles/augur.styl
@@ -166,11 +166,12 @@ section.status
   position: relative
   z-index: 2
 
-.section
+.section {
   height: auto
   overflow: hidden
   position: relative
 }
+
 .section.collapsed {
   max-height:0;
 }
