--- a/frontend/app/styles/augur.styl
+++ b/frontend/app/styles/augur.styl
@@ -1346,3 +1346,14 @@ details summary svg
   background-position-y: bottom;
   padding-right: 2rem
 }
+
+.comp_info {
+  padding: 10px
+}
+
+.comp_manager {
+  height: 13.5rem !important;
+  position: absolute !important; 
+  bottom: 0 !important; 
+  margin-top: auto !important
+}
