add visualization for issues-active
Signed-off-by: Bingwen Ma <mbwpony@gmail.com>

--- a/frontend/app/styles/augur.styl
+++ b/frontend/app/styles/augur.styl
@@ -2182,7 +2182,7 @@ header {
 }
 
 .modal-default-button {
-  float: right;
+
 }
 
 .modal-enter {
@@ -2198,3 +2198,6 @@ header {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
+
+.modal-footer
+  text-align: right
