Progress on adding repo_names to augurdb REPO metrics
Metrics done for REPO metrics not RG metrics except code_changes bc i didnt realize until after but it does not hurt the RG metric:
code_changes
pull_requests_merge_contributor_new
issues_first_time_opened
contributors

--- a/frontend/public/app.css
+++ b/frontend/public/app.css
@@ -3706,6 +3706,71 @@ details summary svg {
   background-position-y: bottom;
   padding-right: 2rem;
 }
+.issue_overview {
+  table-layout: fixed;
+  background: #eaeaea;
+}
+.issue_overview td {
+  padding: 0.5em;
+}
+.issue_overview_scroll {
+  overflow-y: auto;
+  height: 720px;
+}
+.issue_overview_head thead {
+  width: calc(100% - 1em);
+}
+.modal-mask {
+  position: fixed;
+  z-index: 9998;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  transition: opacity 0.3s ease;
+  display: none;
+}
+.is-active {
+  display: table;
+}
+.modal-wrapper {
+  display: table-cell;
+  vertical-align: middle;
+}
+.modal-container {
+  width: 80%;
+  margin: 0px auto;
+  padding: 20px 30px;
+  background-color: #fff;
+  border-radius: 2px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.33);
+  transition: all 0.3s ease;
+  font-family: Helvetica, Arial, sans-serif;
+}
+.modal-header h3 {
+  margin-top: 0;
+  color: #42b983;
+  width: auto;
+}
+.modal-body {
+  margin: 10px 0;
+}
+.modal-enter {
+  opacity: 0;
+}
+.modal-leave-active {
+  opacity: 0;
+}
+.modal-enter .modal-container,
+.modal-leave-active .modal-container {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+.modal-footer {
+  text-align: right;
+  text-align: right;
+}
 .comp_info {
   padding: 10px !important;
 }
