added some more vizs to repo overview (need to be formatted) and fixed some type errors

--- a/frontend/src/styles/augur.styl
+++ b/frontend/src/styles/augur.styl
@@ -1395,3 +1395,10 @@ details summary svg
   bottom: 0 !important; 
   margin-top: auto !important
 }
+
+.lines-of-code-table {
+  th {
+    padding-left: 0
+    padding-right: 5
+  }
+}
