repo overview styling changes

--- a/frontend/src/styles/augur.styl
+++ b/frontend/src/styles/augur.styl
@@ -1269,14 +1269,15 @@ code {
 
 details summary
   text-align: center !important;
-  max-width: 113px
+  max-width: 53px
   float: left
+  transform: translateX(1.3rem) translateY(-0.4rem)
 
 details summary::after {
   display: inline-block;
     position: relative;
   content: " Download Links "
-  font-size: 0.7rem;
+  font-size: 0.5rem;
 }
 
 details summary svg
