frontend looks a lot better

--- a/frontend/src/styles/augur.styl
+++ b/frontend/src/styles/augur.styl
@@ -407,7 +407,11 @@ cite.metric a
   max-height: 0px !important
 
 .lines-of-code-table th, .lines-of-code-table td
-  padding: 0.5rem
+  font-size:0.7rem
+  padding: 0.7rem
+
+.lines-of-code-table
+  max-width:100%
 
 .clickable-header
   cursor: pointer
