single comp page loading and syling fixes

--- a/frontend/src/styles/augur.styl
+++ b/frontend/src/styles/augur.styl
@@ -252,9 +252,9 @@ cite.metric a
 
 .error
   justify-content: center
-  padding: 30px 0px 31px 20px
   text-align: center
   margin: auto
+  max-height: 6rem
 
 .error:before
   font-size: 3em;
