inspect insight fix styling and dashboard some redesigning including underlines to point out links and buttons to go to repo group overview page

--- a/frontend/src/styles/augur.styl
+++ b/frontend/src/styles/augur.styl
@@ -256,6 +256,9 @@ cite.metric a
   margin: auto
   max-height: 6rem
 
+.underline
+  text-decoration: underline
+
 .error:before
   font-size: 3em;
   justify-content: center
