--- a/frontend/src/styles/augur.styl
+++ b/frontend/src/styles/augur.styl
@@ -6,6 +6,10 @@ body
   background: background
   padding-bottom: 216px
 
+#repo_nav:hover
+  background: #eaeaea
+
+
 header
   width: 100%
   min-height: 50px
@@ -30,9 +34,9 @@ header .search
 
 #logo
   display: inline-block
-  margin-top: 0px
-  max-width: 200px
-  transform: translateY(-12px)
+  margin-top: -0.2rem
+  max-width: 10rem
+  transform: translateY(-0px)
 
 .content
 
