--- a/frontend/src/styles/augur.styl
+++ b/frontend/src/styles/augur.styl
@@ -1334,10 +1334,10 @@ header .search
 }
 .mainSideBarNav {
   margin: 0 !important;
-  width: 200px;
 }
 .mainSideBarLink {
   font-size: 0.7rem;
+  padding-left: 1rem !important
 }
 .mainSideBarV {
   width: 240;
