Removed Total/Net/Added switch under Average Lines of Code Per Commit.
Signed-off-by: Carolyn Perniciaro <cmpvm5@mail.missouri.edu>

--- a/frontend/src/styles/augur.styl
+++ b/frontend/src/styles/augur.styl
@@ -535,11 +535,11 @@ header .search
   display: none !important
 
 /*new class*/
-.horizontalBarChartDiv {
+/*.horizontalBarChartDiv {
   position: relative; 
   top: -0px !important;
   transform: translateY(-0.45rem);
-}
+}*/
 /* new class */
 .insightChartDiv {
   position: relative;
