--- a/augur/templates/login.html
+++ b/augur/templates/login.html
@@ -51,12 +51,10 @@
             </div>
             </p>
             <div class="btn" style="background-color: var(--color-accent); padding: 0; margin: 0;">
-                <button id="sigbtn" class="btn btn-outline-dark" style="color: white;" type="submit" name="signin">Sign
-                    in</button>
+                <button id="sigbtn" class="btn btn-outline-dark" style="color: white;" type="submit" name="signin">Sign in</button>
             </div>
             <div class="btn" style="background-color: var(--color-accent); padding: 0; margin: 0;">
-                <button id="regbtn" class="btn btn-outline-dark" style="color: white;" onclick="registration()"
-                    name="register">Register</button>
+                <button id="regbtn" class="btn btn-outline-dark" style="color: white;" onclick="registration()" name="register">Register</button>
             </div>
         </form>
     </div>
