--- a/augur/templates/groups-table.html
+++ b/augur/templates/groups-table.html
@@ -1,4 +1,4 @@
-{% if groups %}
+{# % if groups %}
     <div class="rounded display-table w3-animate-opacity">
         <table class="table table-striped table-bordered">
             <thead>
@@ -30,4 +30,4 @@
     <h1>Your search did not match any results</h1>
 {% else %}
     <h1>Unable to load group information</h1>
-{% endif %}
+{% endif % #}
