--- a/augur/templates/navbar.html
+++ b/augur/templates/navbar.html
@@ -18,7 +18,7 @@
                 {% if current_user.is_authenticated %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        {{ current_user.id }}
+                        {{ current_user.login_name }}
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="{{ url_for('user_settings') }}">Profile</a></li>
@@ -43,9 +43,9 @@
                 </li>
 
                 <!-- STATIC NAVBAR SECTION -->
-                <li class="nav-item">
+                {# <li class="nav-item">
                     <a class="nav-link {% if title == 'Groups' %} active {% endif %}" aria-current="page" href=" {{ url_for('repo_groups_view') }}">Groups</a>
-                </li>
+                </li> #}
                 <li class="nav-item">
                     <a class="nav-link {% if title == 'Status' %} active {% endif %}" aria-current="page" href="{{ url_for('status_view') }}">Collection Status</a>
                 </li>
