--- a/augur/templates/repos-table.html
+++ b/augur/templates/repos-table.html
@@ -2,12 +2,12 @@
 <!-- Top pagination menu start -->
 <nav aria-label="Repository pagination menu" class="overflow-auto">
     <ul class="pagination">
-        <li class="page-item {% if activePage == 1 %} disabled {% else %} w3-hover-purple {% endif %}">
-            <a class="page-link" href="{{ url_for(PS, q=query_key, p=(activePage - 1), s=sorting, r=reverse)}}" {% if activePage == 1 %} tabindex="-1" {% endif %}>Previous</a>
+        <li class="page-item {% if activePage == 0 %} disabled {% else %} w3-hover-purple {% endif %}">
+            <a class="page-link" href="{{ url_for(PS, q=query_key, p=(activePage - 1), s=sorting, r=reverse)}}" {% if activePage == 0 %} tabindex="-1" {% endif %}>Previous</a>
         </li>
-        {% for page in range(1, pages|int + 1) %}
+        {% for page in range(0, pages|int + 1) %}
         <li class="page-item">
-            <a class="page-link {% if page == activePage %} paginationActive {% else %} w3-hover-blue {% endif %}" href="{{ url_for(PS, q=query_key, p=page, s=sorting, r=reverse)}}">{{page}}</a>
+            <a class="page-link {% if page == activePage %} paginationActive {% else %} w3-hover-blue {% endif %}" href="{{ url_for(PS, q=query_key, p=page, s=sorting, r=reverse)}}">{{page + 1}}</a>
         </li>
         {% endfor %}
         <li class="page-item {% if activePage == pages|int %} disabled {% endif %}">
@@ -24,10 +24,10 @@
     key. It is done this way because the client does not receive the full data
     each time they load the page, and instead the server sorts the full data.
 #}
+{# "title" : "Group", "key" : "rg_name"}, #}
 {%- set tableHeaders =
     [{"title" : "#"},
     {"title" : "Repo Name", "key" : "repo_name"},
-    {"title" : "Group", "key" : "rg_name"},
     {"title" : "Reports"},
     {"title" : "Commits", "key" : "commits_all_time"},
     {"title" : "Issues", "key" : "issues_all_time"},
@@ -55,9 +55,9 @@
         <tbody>
             {% for repo in repos %}
             <tr>
-                <th scope="row">{{loop.index + (activePage - 1) * offset}}</th>
+                <th scope="row">{{loop.index + (activePage) * offset}}</th>
                 <td><a href="{{ url_for('repo_repo_view', id=repo.repo_id) }}">{{ repo.repo_name }}</a></td>
-                <td><a href="{{ url_for('repo_groups_view', group=repo.repo_group_id) }}">{{ repo.rg_name }}</a></td>
+                {# <td><a href="{{ url_for('repo_groups_view', group=repo.repo_group_id) }}">{{ repo.rg_name }}</a></td> #}
                 <td>TODO</td>
                 <td>{{ repo.commits_all_time|int }}</td>
                 <td>{{ repo.issues_all_time|int }}</td>
@@ -71,8 +71,8 @@
 <br>
 <nav aria-label="Repository pagination menu" class="overflow-auto">
     <ul class="pagination justify-content-center">
-        <li class="page-item {% if activePage == 1 %} disabled {% else %} w3-hover-purple {% endif %}">
-            <a class="page-link" href="{{ url_for(PS, q=query_key, p=(activePage - 1), s=sorting, r=reverse)}}" {% if activePage == 1 %} tabindex="-1" {% endif %}>Previous</a>
+        <li class="page-item {% if activePage == 0 %} disabled {% else %} w3-hover-purple {% endif %}">
+            <a class="page-link" href="{{ url_for(PS, q=query_key, p=(activePage - 1), s=sorting, r=reverse)}}" {% if activePage == 0 %} tabindex="-1" {% endif %}>Previous</a>
         </li>
         <li class="page-item">
             <a class="page-link" href="#">{{activePage}}</a>
@@ -87,6 +87,9 @@
 {% elif current_user.is_authenticated %}
 <h1>No Repos Tracked</h1>
 <p>Add repos to your personal tracker in your <a href="{{ url_for('user_settings') }}">profile page</a></p>
+{% elif activePage != 0 %}
+<h1>Invalid Page</h1>
+<a href="{{ url_for(PS, q=query_key, s=sorting, r=reverse)}}">Click here to go back</a>
 {% else %}
 <h1>Unable to load repository information</h1>
 {% endif %}
